# midish

./: Cargo.toml  LICENSE  config.ron  config.ron.bu  shell.nix
src/: '  config.rs  main.rs  operations.rs
