[package]
name = "mid2obs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
midir = {version = "0.8.0", default_features = false, features = [ 'jack' ]}
obws = "0.9.1"
ron = "0.7.1"
serde = "1.0.138"
tokio = { version = "1.19.2", features = ["full"] }
tungstenite = "0.17.2"
url = "2.2.2"
